Fix header spacing

--- a/src/UI/Header.module.css
+++ b/src/UI/Header.module.css
@@ -1,13 +1,13 @@
 .title {
   width: 100%;
-  max-width: 150px;
-  margin: 1rem auto;
-  letter-spacing: 1rem;
+  max-width: 100px;
+  margin: 2rem auto;
+  letter-spacing: 0.5rem;
   text-align: center;
   word-wrap: break-word;
   color: hsl(183, 100%, 15%);
   flex: 0 1 auto;
-  font-size: 0.75rem;
+  font-size: 1.5rem;
 }
 
 @media (min-width: 768px) {
